# installer

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  windows.yml
src/: main.rs
src/os/: macos.rs  mod.rs  windows.rs
