[package]
name = "installer"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.50"
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3
strip = true

[package.metadata.bundle]
name = "Pixie Installer"
identifier = "rip.pixie.installer"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "target-feature=+crt-static"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "target-feature=+crt-static"]

[build]
target = "x86_64-pc-windows-msvc"